2008-01-29  Peter Bloomfield

	* libbalsa/mailbox.c:
	(libbalsa_mailbox_n_nodes): traverse nodes instead of msg_tree;
	(libbalsa_mailbox_msgno_removed): ditto.
	(libbalsa_mailbox_search_iter_step): fix corner case.
	(lbm_node_info_new, lbm_node_info_free,
	libbalsa_mailbox_get_msgno, libbalsa_mailbox_get_parent,
	lbm_node_init_children, lbm_nodes_traverse,
	libbalsa_mailbox_traverse,
	libbalsa_mailbox_msgno_inserted, lbm_msgno_filt_in,
	libbalsa_mailbox_set_msg_tree): clean up.

2008-01-28  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_n_nodes): test for
	msg_tree == NULL.
	* src/balsa-mblist.c: (balsa_mblist_set_status_bar): don't test
	msg_tree; don't decrement count.

2008-01-28  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_open,
	libbalsa_mailbox_close): clear mailbox->nodes;
	(lbm_node_new): new, creates info structure;
	(libbalsa_mailbox_msgno_inserted,
	lbm_msgno_filt_in, libbalsa_mailbox_msgno_removed): use
	lbm_node_new();
	(decrease_post): maintain mailbox->nodes when renumbering.

2008-01-27  Peter Bloomfield

	* configure.in: revert adding "-pg".

2008-01-27  Peter Bloomfield

	* libbalsa/mailbox.c: LibBalsaMailbox::nodes is a GPtrArray
	mapping msgno into LibBalsaMailbox::msg_tree; reimplement
	lbm_node_find using it.
	* libbalsa/mailbox.h: ditto.

2008-01-26  Peter Bloomfield

	Initial commit on mailbox-gsequence branch (rev 7831).
	* libbalsa/mailbox.c: reimplement LibBalsaMailbox::msg_tree
	using GSequence.
	* libbalsa/mailbox.h: ditto.
	* libbalsa/mailbox_imap.c: ditto.
	* libbalsa/mailbox_local.c: ditto.
	* src/balsa-mblist.c: (balsa_mblist_set_status_bar): ditto.

2008-01-09  Peter Bloomfield

	* libbalsa/libbalsa.h: add width and height to api for
	libbalsa_show_message_source.
	* libbalsa/source-viewer.c: (lsv_size_allocate_cb): save width
	and height.
	(libbalsa_show_message_source): add width and height to api;
	change horizontal scroll policy to GTK_POLICY_AUTOMATIC.